--- a/index.html
+++ b/index.html
@@ -16,30 +16,60 @@
     <div class="Wrap">
       <!-- .header;; -->
       <header class="header">
-        <div class="container">
-          <nav>
-            <h1>
-              <a href="">logo<img src="" alt="" /></a>
-            </h1>
-            <ul>
-              <li><a href="">menu01</a></li>
-              <li><a href="">menu02</a></li>
-              <li><a href="">menu03</a></li>
-              <li><a href="">menu04</a></li>
-              <li><a href="">menu05</a></li>
-            </ul>
-          </nav>
-        </div>
+        <nav class="gnb">
+          <h1>
+            <a href=""><img src="./img/2K_logo__1_.png" alt="" /></a>
+          </h1>
+          <ul class="menu">
+            <li><a href="">menu01</a></li>
+            <li><a href="">menu02</a></li>
+            <li><a href="">menu03</a></li>
+            <li><a href="">menu04</a></li>
+            <li><a href="">menu05</a></li>
+          </ul>
+          <a href="" class="burger"><i class="xi-bars"></i></a>
+        </nav>
       </header>
       <!-- .header;; -->
 
       <!-- .main;; -->
       <main class="main">
-        <!-- .main_visual;; -->
+        <!-- .mainVisual;; -->
         <section class="mainVisual">
-          <div class="container"></div>
+          <div class="slider">
+            <div class="mainBg quarry">
+              <div class="info">
+                <iframe
+                  width="1264"
+                  height="711"
+                  src="https://www.youtube.com/embed/Zh2K7SxRHmo"
+                  title="The Quarry | Official Announce Trailer | 2K"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+            <div class="mainBg tiny"></div>
+            <div class="mainBg midnight"></div>
+            <div class="mainBg wwe"></div>
+          </div>
+          <div class="titleSlider">
+            <figure class="title quarryTitle">
+              <img src="./img/qqqqq.png" alt="" />
+            </figure>
+            <figure class="title tinyTitle">
+              <img src="./img/logo-tinytina@2x.png" alt="" />
+            </figure>
+            <figure class="title midnightTitle">
+              <img src="./img/midnight-logo-this.png" alt="" />
+            </figure>
+            <figure class="title wweTitle">
+              <img src="./img/2k22-logo.png" alt="" />
+            </figure>
+          </div>
         </section>
-        <!-- .main_visual;; -->
+        <!-- .mainVisual;; -->
 
         <!-- .c01;; -->
         <section class="c01">
