--- a/index.html
+++ b/index.html
@@ -36,37 +36,61 @@
       <main class="main">
         <!-- .mainVisual;; -->
         <section class="mainVisual">
-          <div class="slider">
-            <div class="mainBg quarry">
-              <div class="info">
-                <iframe
-                  width="1264"
-                  height="711"
-                  src="https://www.youtube.com/embed/Zh2K7SxRHmo"
-                  title="The Quarry | Official Announce Trailer | 2K"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                  allowfullscreen
-                ></iframe>
+          <div class="mainSlider">
+            <div class="slider">
+              <div class="mainBg quarry"></div>
+              <div class="mainBg tiny"></div>
+              <div class="mainBg midnight"></div>
+              <div class="mainBg wwe"></div>
+            </div>
+            <div class="titleSlider">
+              <figure class="title quarryTitle">
+                <img src="./img/qqqqq.png" alt="" />
+              </figure>
+              <figure class="title tinyTitle">
+                <img src="./img/logo-tinytina@2x.png" alt="" />
+              </figure>
+              <figure class="title midnightTitle">
+                <img src="./img/midnight-logo-this.png" alt="" />
+              </figure>
+              <figure class="title wweTitle">
+                <img src="./img/2k22-logo.png" alt="" />
+              </figure>
+            </div>
+            <div class="description">
+              <div class="quarryWrap infoWrap">
+                <div class="info quarryInfo">
+                  <div class="closeBtn">
+                    <i class="xi-close"></i>
+                  </div>
+                  <iframe
+                    width="1264"
+                    height="711"
+                    src="https://www.youtube.com/embed/Zh2K7SxRHmo"
+                    title="The Quarry | Official Announce Trailer | 2K"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                  <div class="txt">
+                    <strong
+                      >쿼리
+                      <a href="">
+                        <img src="./img/qqqqq.png" alt="" />
+                      </a>
+                    </strong>
+                    <p>
+                      여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
+                      돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                    </p>
+                    <div class="btn">
+                      <a href="">buy now</a>
+                      <a href="">watch trailer</a>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="mainBg tiny"></div>
-            <div class="mainBg midnight"></div>
-            <div class="mainBg wwe"></div>
-          </div>
-          <div class="titleSlider">
-            <figure class="title quarryTitle">
-              <img src="./img/qqqqq.png" alt="" />
-            </figure>
-            <figure class="title tinyTitle">
-              <img src="./img/logo-tinytina@2x.png" alt="" />
-            </figure>
-            <figure class="title midnightTitle">
-              <img src="./img/midnight-logo-this.png" alt="" />
-            </figure>
-            <figure class="title wweTitle">
-              <img src="./img/2k22-logo.png" alt="" />
-            </figure>
           </div>
         </section>
         <!-- .mainVisual;; -->
