--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="header">
         <nav class="gnb">
           <h1>
-            <a href=""><img src="./img/2K_logo__1_.png" alt="" /></a>
+            <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
           <ul class="menu">
             <li><a href="">menu01</a></li>
@@ -36,6 +36,7 @@
       <main class="main">
         <!-- .mainVisual;; -->
         <section class="mainVisual">
+          <div class="infoWrap"></div>
           <div class="mainSlider">
             <div class="slider">
               <div class="mainBg quarry"></div>
@@ -45,48 +46,140 @@
             </div>
             <div class="titleSlider">
               <figure class="title quarryTitle">
+                <div class="quarryCover"></div>
                 <img src="./img/qqqqq.png" alt="" />
               </figure>
               <figure class="title tinyTitle">
+                <div class="tinyCover"></div>
                 <img src="./img/logo-tinytina@2x.png" alt="" />
               </figure>
               <figure class="title midnightTitle">
+                <div class="midnightCover"></div>
                 <img src="./img/midnight-logo-this.png" alt="" />
               </figure>
               <figure class="title wweTitle">
+                <div class="wweCover"></div>
                 <img src="./img/2k22-logo.png" alt="" />
               </figure>
             </div>
             <div class="description">
-              <div class="quarryWrap infoWrap">
-                <div class="info quarryInfo">
-                  <div class="closeBtn">
-                    <i class="xi-close"></i>
+              <div class="info quarryInfo">
+                <div class="closeBtn">
+                  <i class="xi-close"></i>
+                </div>
+                <iframe
+                  width="1264"
+                  height="711"
+                  src="https://www.youtube.com/embed/Zh2K7SxRHmo"
+                  title="The Quarry | Official Announce Trailer | 2K"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <div class="txt">
+                  <strong
+                    >쿼리
+                    <a href="">
+                      <img src="./img/qqqqq.png" alt="" />
+                    </a>
+                  </strong>
+                  <p>
+                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
+                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                  </p>
+                  <div class="btn">
+                    <a href="">buy now</a>
+                    <a href="">watch trailer</a>
                   </div>
-                  <iframe
-                    width="1264"
-                    height="711"
-                    src="https://www.youtube.com/embed/Zh2K7SxRHmo"
-                    title="The Quarry | Official Announce Trailer | 2K"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
-                  <div class="txt">
-                    <strong
-                      >쿼리
-                      <a href="">
-                        <img src="./img/qqqqq.png" alt="" />
-                      </a>
-                    </strong>
-                    <p>
-                      여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
-                      돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
-                    </p>
-                    <div class="btn">
-                      <a href="">buy now</a>
-                      <a href="">watch trailer</a>
-                    </div>
+                </div>
+              </div>
+              <div class="info tinyInfo">
+                <div class="closeBtn">
+                  <i class="xi-close"></i>
+                </div>
+                <iframe
+                  width="1264"
+                  height="711"
+                  src="https://www.youtube.com/embed/3gJgj2ngCyA"
+                  title="Tiny Tina’s Wonderlands – Official Launch Trailer"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <div class="txt">
+                  <strong
+                    >타이니티나
+                    <a href="">
+                      <img src="./img/logo-tinytina@2x.png" alt="" />
+                    </a>
+                  </strong>
+                  <p>
+                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
+                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                  </p>
+                  <div class="btn">
+                    <a href="">buy now</a>
+                    <a href="">watch trailer</a>
+                  </div>
+                </div>
+              </div>
+              <div class="info midnightInfo">
+                <div class="closeBtn">
+                  <i class="xi-close"></i>
+                </div>
+                <iframe
+                  width="1264"
+                  height="711"
+                  src="https://www.youtube.com/embed/WVZTsTXO3Nk"
+                  title="Marvel’s Midnight Suns | “Darkness Falls” Trailer"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <div class="txt">
+                  <strong
+                    >미드나잇
+                    <a href="">
+                      <img src="./img/midnight-logo-this.png" alt="" />
+                    </a>
+                  </strong>
+                  <p>
+                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
+                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                  </p>
+                  <div class="btn">
+                    <a href="">buy now</a>
+                    <a href="">watch trailer</a>
+                  </div>
+                </div>
+              </div>
+              <div class="info wweInfo">
+                <div class="closeBtn">
+                  <i class="xi-close"></i>
+                </div>
+                <iframe
+                  width="1264"
+                  height="711"
+                  src="https://www.youtube.com/embed/NYzxYzM3Rj8"
+                  title="WWE 2K22. It Hits Different. (Official Announce Trailer)"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <div class="txt">
+                  <strong
+                    >2k22
+                    <a href="">
+                      <img src="./img/2k22-logo.png" alt="" />
+                    </a>
+                  </strong>
+                  <p>
+                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
+                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                  </p>
+                  <div class="btn">
+                    <a href="">buy now</a>
+                    <a href="">watch trailer</a>
                   </div>
                 </div>
               </div>
