--- a/index.html
+++ b/index.html
@@ -45,20 +45,16 @@
               <div class="mainBg wwe"></div>
             </div>
             <div class="titleSlider">
-              <figure class="title quarryTitle">
-                <div class="quarryCover"></div>
+              <figure class="title quarryTitle on">
                 <img src="./img/qqqqq.png" alt="" />
               </figure>
               <figure class="title tinyTitle">
-                <div class="tinyCover"></div>
                 <img src="./img/logo-tinytina@2x.png" alt="" />
               </figure>
               <figure class="title midnightTitle">
-                <div class="midnightCover"></div>
                 <img src="./img/midnight-logo-this.png" alt="" />
               </figure>
               <figure class="title wweTitle">
-                <div class="wweCover"></div>
                 <img src="./img/2k22-logo.png" alt="" />
               </figure>
             </div>
@@ -70,7 +66,7 @@
                 <iframe
                   width="1264"
                   height="711"
-                  src="https://www.youtube.com/embed/Zh2K7SxRHmo"
+                  src="https://www.youtube.com/embed/Zh2K7SxRHmo?enablejsapi=1&version=3&playerapiid=ytplayer"
                   title="The Quarry | Official Announce Trailer | 2K"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -100,7 +96,7 @@
                 <iframe
                   width="1264"
                   height="711"
-                  src="https://www.youtube.com/embed/3gJgj2ngCyA"
+                  src="https://www.youtube.com/embed/3gJgj2ngCyA?enablejsapi=1&version=3&playerapiid=ytplayer"
                   title="Tiny Tina’s Wonderlands – Official Launch Trailer"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -130,7 +126,7 @@
                 <iframe
                   width="1264"
                   height="711"
-                  src="https://www.youtube.com/embed/WVZTsTXO3Nk"
+                  src="https://www.youtube.com/embed/WVZTsTXO3Nk?enablejsapi=1&version=3&playerapiid=ytplayer"
                   title="Marvel’s Midnight Suns | “Darkness Falls” Trailer"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -160,7 +156,7 @@
                 <iframe
                   width="1264"
                   height="711"
-                  src="https://www.youtube.com/embed/NYzxYzM3Rj8"
+                  src="https://www.youtube.com/embed/NYzxYzM3Rj8?enablejsapi=1&version=3&playerapiid=ytplayer"
                   title="WWE 2K22. It Hits Different. (Official Announce Trailer)"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
