--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@
                 ></iframe>
                 <div class="txt">
                   <strong
-                    >타이니티나
+                    >타이니 티나의 원더랜드
                     <a href="">
                       <img src="./img/logo-tinytina@2x.png" alt="" />
                     </a>
                   </strong>
                   <p>
-                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
-                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                    기발하고도, 놀라우며, 초강력 무기로 가득한 전설적인 모험을 떠나세요.<br />
+                    여러분만의 멀티클래스 영웅을 만들어 쏘고, 베고, 줍고, 발사! <br />
+                    포악한 용의 군주를 막는 퀘스트를 진행하세요.
                   </p>
                   <div class="btn">
                     <a href="">buy now</a>
@@ -134,14 +135,14 @@
                 ></iframe>
                 <div class="txt">
                   <strong
-                    >미드나잇
+                    >마블 미드나이트 선즈
                     <a href="">
                       <img src="./img/midnight-logo-this.png" alt="" />
                     </a>
                   </strong>
                   <p>
-                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
-                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                    마블 미드나잇 선즈는 마블 유니버스의 어두운 일면에서 펼쳐지는 신규 전술 RPG입니다. <br />
+                    지구 최후의 순간 미드나잇 선즈와 팀을 이뤄 지옥에서 출몰한 사악한 군대에 맞서 싸우세요.
                   </p>
                   <div class="btn">
                     <a href="">buy now</a>
@@ -170,8 +171,8 @@
                     </a>
                   </strong>
                   <p>
-                    여름 캠프 마지막 날의 해가 저물자, 해킷 채석장의 10대 지도교사들은 기념 파티를 엽니다. <br />
-                    돌봐야 할 어린 학생도, 눈치 볼 어른도, 지켜야 할 규칙도 없으니까요.
+                    NBA 2K22에서 역경을 딛고 일어서 숨겨진 잠재력을 발휘하세요. <br />
+                    이제 위대함을 향해 올라서세요.
                   </p>
                   <div class="btn">
                     <a href="">buy now</a>
