--- a/index.html
+++ b/index.html
@@ -193,11 +193,149 @@
         </section>
         <!-- .mainVisual;; -->
 
-        <!-- .c01;; -->
-        <section class="c01">
-          <div class="container"></div>
+        <!-- .category;; -->
+        <section class="category">
+          <div class="container">
+            <div class="tab">
+              <div class="shooter on">
+                <p>shooter</p>
+              </div>
+              <div class="sports">
+                <p>sports</p>
+              </div>
+              <div class="strategy">
+                <p>strategy</p>
+              </div>
+            </div>
+            <ul class="shooterGames on genre">
+              <div class="gameList">
+                <li>
+                  <ul class="left">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/5ca4237bd23b0BL3_2K_GAMES_INDEX_600x600.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/5f1a1081defdetile_m1_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/battleborn_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-tc_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="center">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="right">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/darkness2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/darkness_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/dukenukemforever_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/specops_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              </div>
+            </ul>
+            <ul class="sportsGames genre"></ul>
+            <ul class="strategyGames genre"></ul>
+          </div>
         </section>
-        <!-- .c01;; -->
+        <!-- .category;; -->
 
         <!-- .c02;; -->
         <section class="c02">
