--- a/index.html
+++ b/index.html
@@ -241,12 +241,6 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/shooter/bioshock-tc_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
                   </ul>
                 </li>
                 <li>
@@ -278,12 +272,6 @@
                     <li>
                       <a href="#!">
                         <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
-                        <p>Borderlands</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#!">
-                        <figure><img src="./img/shooter/borderlands2_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -321,9 +309,109 @@
                         <p>Borderlands</p>
                       </a>
                     </li>
+                  </ul>
+                </li>
+              </div>
+            </ul>
+            <ul class="sportsGames genre">
+              <div class="gameList">
+                <li>
+                  <ul class="left">
                     <li>
                       <a href="#!">
-                        <figure><img src="./img/shooter/specops_tile_L_1.jpg" alt="" /></figure>
+                        <figure><img src="./img/shooter/5ca4237bd23b0BL3_2K_GAMES_INDEX_600x600.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/5f1a1081defdetile_m1_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/battleborn_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="center">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="right">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/darkness2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/darkness_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/dukenukemforever_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
                         <p>Borderlands</p>
                       </a>
                     </li>
@@ -331,8 +419,112 @@
                 </li>
               </div>
             </ul>
-            <ul class="sportsGames genre"></ul>
-            <ul class="strategyGames genre"></ul>
+            <ul class="strategyGames genre">
+              <div class="gameList">
+                <li>
+                  <ul class="left">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/5ca4237bd23b0BL3_2K_GAMES_INDEX_600x600.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/5f1a1081defdetile_m1_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/61413d6e56cbeTTWL_std_keyart_600x600.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/battleborn_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="center">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock-infinite_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/bioshock2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/borderlands1_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="right">
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/darkness2_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/darkness_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/dukenukemforever_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia2_tile_T_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#!">
+                        <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+                        <p>Borderlands</p>
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              </div>
+            </ul>
           </div>
         </section>
         <!-- .category;; -->
